--- a/doctor-office-frontend/dockerfile
+++ b/doctor-office-frontend/dockerfile
@@ -5,4 +5,4 @@ RUN npm install
 COPY . .
 RUN npm run build
 EXPOSE 3001
-CMD ["npx", "serve", "build"]
+CMD ["npx", "serve", "-s", "build", "-l", "3001"] # Serving on port 3001
