--- a/doctor-office-backend/dockerfile
+++ b/doctor-office-backend/dockerfile
@@ -2,6 +2,7 @@ FROM node:18.19.1
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
+RUN npm install cors
 COPY . .
 EXPOSE 3000
 CMD ["node", "index.js"]
