--- a/mongo-deployment.yaml
+++ b/mongo-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -17,15 +18,3 @@ spec:
         image: mongo:4.0
         ports:
         - containerPort: 27017
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: mongo-service
-spec:
-  selector:
-    app: mongo
-  ports:
-    - protocol: TCP
-      port: 27017
-      targetPort: 27017
